make sure white spaces (in particular new lines) are correctly handled in short answer quiz questions
we don’t need a distinction between lists and normal text in short answer questions

--- a/src/main/webapp/content/scss/quiz.scss
+++ b/src/main/webapp/content/scss/quiz.scss
@@ -9,15 +9,15 @@
     margin-bottom: 8px;
 }
 
-.saQuestion-list {
-    display: block;
+.short-answer-question-display {
+    white-space: pre;
     margin-bottom: 10px;
 }
 
 .saQuestion-text {
     display: inline-flex;
 
-    &.saQuestion-list {
+    &.short-answer-question-display {
         margin-bottom: 10px;
         display: flex;
     }
